# HighCostDrugsPathways

./: .gitignore  01_nhs_classic.html  AdditionalAnalytics.md  CLAUDE.md  DESIGN_SYSTEM.md  IMPLEMENTATION_PLAN.md  RALPH_PROMPT.md  README.md  app.spec  app_desktop.py  guardrails.md  power query.pq  progress.txt  pyproject.toml  ralph.ps1  requirements.txt  run.bat  run_dash.py  rxconfig.py  setup_dev.py  snomed_indication_mapping_query.sql
.claude/: settings.json  settings.local.json
analysis/: CLAUDE.md  pathway_analyzer.py  statistics.py
archive/: IMPROVEMENT_RECOMMENDATIONS.md  LookupSearchTermCleanedDrugName.csv  condition_directorate_mapping.csv
archive/can_delete/: iteration_2.raw.jsonl  iteration_3.raw.jsonl  iteration_4.raw.jsonl  iteration_5.raw.jsonl  iteration_6.raw.jsonl  iteration_7.raw.jsonl  iteration_8.raw.jsonl
archive/pathways_app/: pathways_app.py
archive/pathways_app/components/: layout.py  navigation.py
cli/: __init__.py  compute_trends.py  refresh_pathways.py
config/: __init__.py  snowflake.toml
core/: __init__.py  config.py  models.py  resource_path.py
dash_app/: app.py
dash_app/assets/: nhs.css
dash_app/callbacks/: __init__.py  chart.py  drawer.py  filters.py  kpi.py  modals.py  navigation.py  trends.py  trust_comparison.py
dash_app/components/: chart_card.py  drawer.py  filter_bar.py  footer.py  header.py  kpi_row.py  modals.py  sidebar.py  sub_header.py  trends.py  trust_comparison.py
dash_app/data/: card_browser.py  queries.py
data/: DimSearchTerm.csv  TA-recommendations.csv  defaultTrusts.csv  directory_list.csv  drug_directory_list.csv  drug_indication_clusters.csv  drugnames.csv  include.csv  org_codes.csv  pathways.db  ta-recommendations.xlsx  treatment_function_codes.csv  unmapped_drug_names.csv  unmapped_drugs_ta_mapping.csv
data_processing/: CLAUDE.md  __init__.py  data_source.py  database.py  diagnosis_lookup.py  load_snomed_mapping.py  loader.py  migrate.py  pathway_pipeline.py  pathway_queries.py  patient_data.py  reference_data.py  schema.py  snowflake_connector.py  transforms.py
docs/: DEPLOYMENT.md  DESIGN_SYSTEM.md  PHASE10_DESIGN.md  SNOWFLAKE_REFERENCE.md  USER_GUIDE.md
images/: logo.png - Shortcut.lnk
pathways_app/: __init__.py  app_v2.py  pathways_app.py  styles.py
pathways_app/components/: __init__.py
src/analysis/: __init__.py
src/cli/: CLAUDE.md  refresh_pathways.py
src/config/: CLAUDE.md  __init__.py
src/core/: CLAUDE.md  logging_config.py
src/data_processing/: cache.py  data_source.py  diagnosis_lookup.py  loader.py  migrate.py  parsing.py  pathway_pipeline.py  pathway_queries.py  schema.py
src/visualization/: CLAUDE.md  plotly_generator.py
tests/: __init__.py  benchmark_performance.py  conftest.py  test_config.py  test_data_transformations.py  test_large_dataset_performance.py  test_models.py  test_output_verification.py  test_plotly_interactivity.py  test_real_data_undefined_rate.py
tools/: dashboard_gui.py
visualization/: __init__.py  plotly_generator.py
