[tool.setuptools]
py-modules = []
packages = []
[project]
name = "patient-pathway-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "darkdetect==0.8.0",
    "decorator==5.1.1",
    "et-xmlfile==1.1.0",
    "executing==1.2.0",
    "fastparquet>=2024.11.0",
    "idna==3.4",
    "itsdangerous==2.1.2",
    "jedi==0.18.2",
    "jinja2==3.1.2",
    "jupyter-core==5.3.1",
    "numpy==1.25.0",
    "packaging==23.1",
    "pandas==2.0.3",
    "pillow==10.0.0",
    "plotly==5.15.0",
    "pyarrow>=20.0.0",
    "python-dateutil==2.8.2",
    "reflex>=0.6.0",
    "tenacity==8.2.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (require external resources)",
    "largedata: marks tests that require large datasets (deselect with '-m \"not largedata\"')",
]

[tool.coverage.run]
source = ["core", "data_processing", "analysis", "visualization", "tools"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
