[project]
name = "patient-pathway-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash>=2.14.0",
    "dash-mantine-components>=0.14.0",
    "fastparquet>=2024.11.0",
    "numpy>=1.25.0",
    "pandas>=2.0.3",
    "pillow>=10.0.0",
    "plotly>=5.15.0",
    "pyarrow>=20.0.0",
    "pyinstaller>=6.18.0",
    "pywebview>=6.1",
    "snowflake-connector-python>=3.0.0",
    "tomli>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (require external resources)",
    "largedata: marks tests that require large datasets (deselect with '-m \"not largedata\"')",
]

[tool.coverage.run]
source = ["src/core", "src/data_processing", "src/analysis", "src/visualization"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
